--- a/index.html
+++ b/index.html
@@ -3381,10 +3381,16 @@
 
             async signInWithGoogle() {
                 try {
+                    let redirectTo = window.location.origin;
+
+                    if (window.location.pathname.includes('/constructor/')) {
+                        redirectTo = `${window.location.origin}/constructor`;
+                    }
+
                     const { data, error } = await this.supabase.auth.signInWithOAuth({
                         provider: 'google',
                         options: {
-                            redirectTo: window.location.origin
+                            redirectTo: redirectTo
                         }
                     });
 
