--- a/index.html
+++ b/index.html
@@ -3966,7 +3966,7 @@
                         .from('users')
                         .select('*')
                         .eq('user_id', this.user.id)
-                        .single();
+                        .maybeSingle();
 
                     if (error && error.code !== 'PGRST116') throw error;
 
@@ -4879,3 +4879,4 @@
 </body>
 
 </html>
+
