--- a/index.html
+++ b/index.html
@@ -4061,9 +4061,21 @@
             async signInWithGoogle() {
                 try {
                     let redirectTo = window.location.origin;
-                    if (window.location.pathname.includes('/constructor/')) {
+
+                    // Для локального сервера используем текущий путь
+                    if (window.location.hostname === '127.0.0.1' || window.location.hostname === 'localhost') {
+                        redirectTo = window.location.href.split('?')[0]; // Убираем query params
+                    }
+
+                    else if (window.location.pathname.includes('/constructor/')) {
                         redirectTo = `${window.location.origin}/constructor`;
                     }
+
+                    else {
+                        redirectTo = window.location.origin;
+                    }
+
+                    console.log('Auth redirect to:', redirectTo);
 
                     const { data, error } = await this.supabase.auth.signInWithOAuth({
                         provider: 'google',
